--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,14 @@
-from setuptools import setup, find_packages
-from pathlib import Path
-
-CWD = Path(__file__).parent
-long_description = (CWD / 'README.md').read_text()
-
-
-setup(
-    name='fontknife',
-    version='0.1.2',
-    author='pushfoo',
-    url='https://github.com/pushfoo/fontknife',
-    description="Rasterize only the glyphs you need.",
-    long_description=long_description,
-    long_description_content_type='text/markdown',
-    install_requires=[
-        'pillow>=9.3,<10',
-        'regex==2022.10.31'  # Provides unicode grapheme support
-    ],
-    packages=find_packages(include=['fontknife', 'fontknife.*']),
-    entry_points={
-        "console_scripts": [
-            "fontknife=fontknife.commands.__main__:main",
-        ]
-    },
-    requires_python='>=3.7',
-    tests_require=['pytest>=7.1,<8'],
-    classifiers=[
+[project]
+name = "fontknife"
+version = "0.1.2"
+readme = "README.md"
+description = "Rasterize only the glyphs you need."
+authors = [
+    {name="pushfoo"}
+]
+license = {file = "LICENSE"}
+requires-python = ">=3.7"
+classifiers=[
         "Development Status :: 3 - Alpha",
         "Programming Language :: Python :: 3",
         "Programming Language :: Python :: 3.7",
@@ -46,4 +29,32 @@ setup(
         "Topic :: Multimedia :: Graphics :: Graphics Conversion",
         "Topic :: Software Development :: Libraries",
     ]
-)
+dependencies = [
+    'pillow>=9.3,<10',
+    'regex==2022.10.31'  # Provides unicode grapheme support
+]
+
+
+[project.urls]
+Homepage = "https://github.com/pushfoo/fontknife"
+Issues = "https://github.com/pushfoo/fontknife/issues"
+Source = "https://github.com/pushfoo/fontknife"
+
+
+[project.optional-dependencies]
+dev = [
+    'pytest>=7.1,<8'
+]
+
+[project.scripts]
+fontknife = "fontknife.commands.__main__:main"
+
+[tool.setuptools.packages.find]
+include = ["fontknife", "fontknife.*"]
+
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.pytest.ini_options]
+norecursedirs = ["doc", ".venv", "env", "dist"]
