--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,19 +3,19 @@ name: GitHub Ubuntu Tests
 on:
   # Template the default branch rather than hard-coding it
   push:
-    branches: [ $default-branch ]
+    branches: [ master ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ master ]
 
 jobs:
-  build:
 
-    runs-on: ${{ matrix.os }}
+  build:
+    name: test
+    runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11']
-        architecture: ['x64']
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
@@ -24,7 +24,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          architecture: ${{ matrix.architecture }}
 
       - name: Environment update install
         run: |
