Use a clearer structure for commands & parsing
* Move argparse helpers out of __main__.py

* Clean up imports at top of __main__.py

* Restructure __main__, arg parsing, and commands into frontend module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ dev = [
 ]
 
 [project.scripts]
-fontknife = "fontknife.commands.__main__:main"
+fontknife = "fontknife.frontend.__main__:main"
 
 [tool.setuptools.packages.find]
 include = ["fontknife", "fontknife.*"]
