--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,11 @@ Source = "https://github.com/pushfoo/fontknife"
 
 [project.optional-dependencies]
 dev = [
-    'pytest>=7.1,<8'
+    'pytest>=7.1,<8',
+    # Allows reading pyproject.toml in a forward-compatible way
+    'tomli==2.0.1 ; python_version < "3.11"',
+    'sphinx==7.2.2',
+    'sphinx-rtd-theme==1.2.2'
 ]
 
 [project.scripts]
