--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ dev = [
     'pytest>=7.1,<8',
     # Allows reading pyproject.toml in a forward-compatible way
     'tomli==2.0.1 ; python_version < "3.11"',
-    'sphinx==7.2.2',
+    'sphinx<7',
     'sphinx-rtd-theme==1.2.2'
 ]
 
