--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "fontknife"
-version = "0.1.2"
+version = "0.1.3"
 readme = "README.md"
 description = "Rasterize only the glyphs you need."
 authors = [
@@ -41,12 +41,19 @@ Source = "https://github.com/pushfoo/fontknife"
 
 
 [project.optional-dependencies]
-dev = [
-    'pytest>=7.1,<8',
+# Used to build doc, ie readthedocs.org
+docs = [
     # Allows reading pyproject.toml in a forward-compatible way
     'tomli==2.0.1 ; python_version < "3.11"',
     'sphinx<7',
-    'sphinx-rtd-theme==1.2.2'
+    'sphinx-rtd-theme==1.2.2',
+]
+# Local developer environment
+dev = [
+    'pytest>=7.1,<8',
+    # Allows rebuilding docs/requirements.txt with this command
+    # pip-compile --extra=docs --output-file=docs/requirements.txt pyproject.toml
+    'pip-tools==7.3.0'
 ]
 
 [project.scripts]
