Fix return and annotation on MissingGlyphError
* Fix MissingGlyphError.default_message return

* Add typing_extensions to dependencies

* Annotate fixed classmethod with Self return type

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ classifiers=[
     ]
 dependencies = [
     'pillow==9.4',
-    'regex==2022.10.31'  # Provides unicode grapheme support
+    'regex==2022.10.31',  # Provides unicode grapheme support
+    'typing_extensions'
 ]
 
 
