--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "fontknife"
-version = "0.1.3"
+version = "0.2.0"
 readme = "README.md"
 description = "Rasterize only the glyphs you need."
 authors = [
@@ -29,7 +29,7 @@ classifiers=[
         "Topic :: Software Development :: Libraries",
     ]
 dependencies = [
-    'pillow==9.4',
+    'pillow~=10.1.0',
     'regex==2022.10.31',  # Provides unicode grapheme support
     'typing_extensions'
 ]
