Set up mypy + start type cleanups
* Use Mode1 in more places

* Add mypy & types-pillow to dev deps

* Use Mode1, ModeAny, and fix other typing in raster_font.py

* Use ModeAny in truetype

* Remove unused import in truetype

* Move calculate_aligments to old script

* Add ignores for old scripts in pyproject.toml

* Delete imports in fontknife/__init__.py

* Add types-regex to dev requirements

* Rename Coord -> CoordLike

* Make Coord a NamedTuple subclass

* Add PathLikeOr alias

* Improve stream type annotations

* Clean up typing on utils.get_total_image_size_for_bbox and show_image_for_text

* Move the color type aliases into custom_types.py

* Homogenize empty_core to use same argument style

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,9 @@ docs = [
 # Local developer environment
 dev = [
     'pytest>=7.1,<8',
+    'mypy',
+    'types-pillow',
+    'types-regex',
     # Allows rebuilding docs/requirements.txt with this command
     # pip-compile --extra=docs --output-file=docs/requirements.txt pyproject.toml
     'pip-tools==7.3.0'
@@ -69,3 +72,9 @@ build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
 norecursedirs = ["doc", ".venv", "env", "dist"]
+
+[tool.mypy]
+exclude = [
+    'fontknife/generate_octo.py',
+    'fontknife/create_textfont.py'
+]
