--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,6 +19,7 @@ jobs:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         architecture: ['x64']
+        os: [ 'ubuntu-latest' ]
 
     steps:
       - uses: actions/checkout@v3
