Clarify & reduce brittleness of doc builds
* Clean up config order & comments

* Replace rst_prolog generation's PROLOG_KEYS dict with an f-string

* Add logging kludges + detailed explanations of why

* Use branch info for unstable builds

* Log the rst_prolog values to the build output for quick spot checks

* Move non-raising simple config to earlier in conf.py

* Clarify failures with context manager to make output more legible

* Improving spacing and section header comments in conf.py

* Use regex module in conf.py since we sometimes need matching captured groups

* Use typing.Pattern to cover both regex modules (re and 3rd party regex)

* Simplify commit metadata fetching

* Add tweak for local git regex to support multiple branches

* Add warning for unstable branches and extlinks-based nudge to stable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,9 +36,10 @@ dependencies = [
 
 
 [project.urls]
-Homepage = "https://github.com/pushfoo/fontknife"
-Issues = "https://github.com/pushfoo/fontknife/issues"
-Source = "https://github.com/pushfoo/fontknife"
+Homepage = "https://github.com/pushfoo/Fontknife"
+Documentation = "https://fontknife.readthedocs.io/en/latest"
+Issues = "https://github.com/pushfoo/Fontknife/issues"
+Source = "https://github.com/pushfoo/Fontknife"
 
 
 [project.optional-dependencies]
