--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,10 @@ classifiers=[
         "Topic :: Software Development :: Libraries",
     ]
 dependencies = [
-    'pillow~=11.0.0',
+    'Pillow~=11.0.0',
     'regex~=2024.11.6',  # Provides unicode grapheme support
-    'typing_extensions'
+    'typing_extensions',
+    'types-regex~=2024.11.6.20241221'
 ]
 
 
@@ -55,8 +56,6 @@ docs = [
 dev = [
     'pytest~=8.3.4',
     'mypy',
-    'types-pillow',
-    'types-regex',
     # Allows rebuilding docs/requirements.txt with this command
     # pip-compile --extra=docs --output-file=docs/requirements.txt pyproject.toml
     'pip-tools==7.4.1'
