--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers=[
         "Programming Language :: Python :: 3.11",
         "Programming Language :: Python :: 3.12",
         "Programming Language :: Python :: 3.13",
+        "Programming Language :: Python :: 3.14",
         "License :: OSI Approved :: MIT License",
         "Operating System :: OS Independent",
         "Intended Audience :: Developers",
@@ -30,7 +31,7 @@ classifiers=[
         "Topic :: Software Development :: Libraries",
     ]
 dependencies = [
-    'Pillow~=11.1.0',
+    'Pillow~=12.0.0',
     'regex~=2024.11.6',  # Provides unicode grapheme support
     'typing_extensions',
     'types-regex~=2024.11.6.20241221'
